User johns
Date Thu Nov 18 18:31:18 CET 2010

    Fixed: Ignore screen-saver-off, if already handled.

Date Mon Sep 20 16:03:41 CEST 2010

    Fixed bug: After sleep a line stays.

Date Wed Sep 15 14:31:38 CEST 2010

    Added man page.

Date Thu Aug 19 13:16:21 CEST 2010

    Added documentation for join CPUs.
    Expose handling is not needed, when background pixmap is used.

Date Mon Aug  2 13:12:56 CEST 2010

    Added support for hyper-threading CPUs.
    Added small gap between log area and current cpu usage bar.

Date Thu May 27 16:09:44 CEST 2010

    Added support to run on any X11 screen.

Date Thu May 20 10:09:10 CEST 2010

    Version 1.0 released.

Date Wed May 12 14:14:33 CEST 2010

    Initial version.

---