@@ -50,6 +50,16 @@ E</A><P>
 
       <h2>News</h2>
 	<h3>
+	Mon May  2 14:52:32 CEST 2011
+	</h3>
+
+	Version 1.02 released.
+	<P>
+	Made compatible with xcb version >= 1.7 and xcb-utils version >= 0.3.8
+	<BR>
+	Fixed: Ignore screen-saver-off, if already handled.
+
+	<h3>
 	Thu Nov 18 20:33:01 CET 2010
 	</h3>
 
@@ -88,7 +98,10 @@ E</A><P>
 
       <h2>Downloads</h2>
 
-      Source Version 1.01 (GIT-9838874)
+      <P>Source Version 1.02 (GIT-)
+      <br><a href=""></a>
+
+      <P>Source Version 1.01 (GIT-9838874)
       <br><a href="wmcpumon-2010-08-21-19.tar.bz2">wmcpumon-2010-08-21-19.tar.bz2</a>
       <P>Source Version 1.00 (GIT-4699c7e)
       <br><a href="wmcpumon-2010-05-20-12.tar.bz2">wmcpumon-2010-05-20-12.tar.bz2</a>
